--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -124,3 +124,13 @@
     });
 </script>
 {{- end }}
+
+<script>
+window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['$$','$$'], ['\\[','\\]']]
+  }
+};
+</script>
+<script async id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
